# Findly

./: .dockerignore  .gitignore  Dockerfile  README.md  check_data.py  init_cloud_db.py  main.py  models.py  pyproject.toml  requirements.txt  reset_db.py  scraper.py  test_db.py
backend/: check_data.py  database.py  main.py  reset_db.py  scraper.py  utils.py
frontend/: index.html
